--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,41 +2,33 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
 
 jobs:
-  build-publish:
-    name: "Build image and publish"
-    timeout-minutes: 15
-    runs-on: ubuntu-22.04
+  release:
     permissions:
-      contents: read
-      packages: write
-      id-token: write
+      contents: write
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Unshallow
-        run: git fetch --prune --unshallow
-
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@v3.1.1
-      - name: Set up docker buildx
-        run: make docker-init
-
-      - name: Github registry login
-        uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
-      - name: Build and push
-        timeout-minutes: 10
-        run: make images
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install Helm
+        uses: azure/setup-helm@v3.5
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.5.0
+        with:
+          config: cr.yaml
+          charts_dir: charts
         env:
-          PUSH: "true"
-      - name: Sign images
-        timeout-minutes: 4
-        run: make images-cosign
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_SKIP_EXISTING: true
