--- a/charts/proxmox-csi-plugin/Chart.yaml
+++ b/charts/proxmox-csi-plugin/Chart.yaml
@@ -11,8 +11,9 @@ keywords:
   - block-storage
   - volume
 maintainers:
-  - name: sergelogvinov
-    url: https://github.com/sergelogvinov
+- name: owlfog
+  url: https://github.com/owlfog
+
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
